gccida/c3/convert_to_vector
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_to_vector/src/convert.c:929:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_to_vector/src/convert.c:940:19: error: expected expression
v2 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_to_vector/src/convert.c:940:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)*( &global_trees + 11); 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_to_vector/src/obj/convert.o] Error 1
